--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
     <h3><a href="./public/5project.html" target="_blank">A sort of site that can be used for birthday invitations n shit</a></h3>
     <img src="./assets/images/party.png" alt="Image of my birthday invitation site" height="300" >
+
+    <p>&copy; Sujal</p>
 </body>
 </html>
